Fix book card gap issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ main h2 {
 
     display: flex;
     flex-direction: row;
+    gap: 24px;
     align-items: center;
     justify-content: space-between;
 }
